# PythonFlaskChatGptRestAPI

./: .gitignore  main.py  pyproject.toml
chat_gpt/: chat_gpt_controller.py  chat_gpt_model.py  chat_gpt_service.py
